Fixed site container height; Added spacing between lines

--- a/mb-personal-site/src/app/app.component.sass
+++ b/mb-personal-site/src/app/app.component.sass
@@ -1,5 +1,7 @@
+$footer-height: 140px
+
 .site-container
-  height: 100%   
+  min-height: calc( 100vh - #{$footer-height} )
   padding: 0px 
 
 .content-container
