--- a/mb-personal-site/src/app/components/about-me/about-me.component.sass
+++ b/mb-personal-site/src/app/components/about-me/about-me.component.sass
@@ -3,7 +3,7 @@
   padding: 0 0 20px 0
 
   img
-    min-width: 225px
+    min-width: 272px
 
 .personal-information
   padding: 30px 15px
