--- a/mb-personal-site/src/styles.sass
+++ b/mb-personal-site/src/styles.sass
@@ -4,8 +4,8 @@
 // @import '@angular/material/prebuilt-themes/indigo-pink.css'
 // @import '@angular/material/prebuilt-themes/purple-green.css'
 
-// body 
-//   background-color: #303030  
+html *
+  line-height: 30px
 
 p
   color: #939393
@@ -25,7 +25,7 @@ h1, h2, h3, h4, h5
   h2
     margin: 20px 0px 0px 0px 
 
-  .section-text
+  .section-text    
     //margin: 20px 0px
     //margin: 0px 0px 40px 0px
 
@@ -43,4 +43,4 @@ main
   flex: 1 0 auto
 
 .page-footer
-  background-color: #2978b5  
+  background-color: #2978b5   
